--- a/Visualization/FinalIndex.html
+++ b/Visualization/FinalIndex.html
@@ -7,8 +7,8 @@
 		<style>
 		</style>
 		<link rel="stylesheet" type="text/css" href="css/NewHistogram.css">
-        <link rel="stylesheet" type="text/css" href="css/3DModel.css">
-        <link rel="stylesheet" type="text/css" href="css/heatmap.css">
+            <link rel="stylesheet" type="text/css" href="css/3DModel.css">
+            <link rel="stylesheet" type="text/css" href="css/heatmap.css">
 		<script src="js/three.js"></script>
 		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		<script src="js/detector.js"></script>
@@ -17,37 +17,80 @@
 		<script src="js/OrbitControls.js"></script>
 	</head>
 	<body>
+		<div id="heatmaps"></div>
+		<div id="histograms"></div>
+            <div id="model"></div>
+
 		<script>
-			// Histogram #1
+		/*
+		 * Histogram Allocation
+		 */
+		var histograms = new Array(); 
+		// Histogram #1
             width = window.innerWidth/5;
             height = window.innerHeight/5;
             var h1 = new NewHistogram(width, height, "data/barchart.tsv");
-            h1.addToBody();
+            histograms[0] = h1;
 
             // Histogram #2
             var h2 = new NewHistogram(width, height, "data/barchart.tsv");
-            h2.addToBody();
+            histograms[1] = h2;
+
 
             // Histogram #3
             var h3 = new NewHistogram(width, height, "data/barchart.tsv");
-            h3.addToBody();
+            histograms[2] = h3;
 
+            /*
+             * When called with the new orientation:
+             * 1) Goes through all thie histograms and highlights the associated bar
+             * 2) Goes through all the heatmaps and marks the associated point
+             * 3) Rotates the STL
+             */
+		function updateOrientation(orientX, orientY) {
+			console.log("Updating the orientation of the STL with xRotation: " + orientX + "yRotation: " + orientY);
+                  var h;
+                  for (var i = 0; i < histograms.length; i++) {
+                        h = histograms[i];
+                        h.highlightBar(Math.random());
+                  }
+		}
+
+            /*
+             * Heatmaps Allocation
+             */
+            var heatmaps = new Array();  
             // HeatMap #1
             width = window.innerWidth/5;
             height = window.innerHeight/5;
-            var hm1 = new HeatMap(width, height, "data/heatmap.json");
-            hm1.addToBody();
+            var hm1 = new HeatMap(width, height, "data/heatmap.json", updateOrientation);
+            heatmaps[0] = hm1;
 
             // HeatMap #2
-            var hm2 = new HeatMap(width, height, "data/heatmap.json");
-            hm2.addToBody();
+            var hm2 = new HeatMap(width, height, "data/heatmap.json", updateOrientation);
+            heatmaps[1] = hm2;
 
             // HeatMap #3
-            var hm3 = new HeatMap(width, height, "data/heatmap.json");
+            var hm3 = new HeatMap(width, height, "data/heatmap.json", updateOrientation);
+            heatmaps[2] = hm3;
+
+            var xRotation, yRotation;
+
+            /*
+             * Heatmaps Add to Body
+             */
+            hm1.addToBody();
+            hm2.addToBody();
             hm3.addToBody();
-            
+
+            /**
+             * Histogram Add to Body
+             */
+            h1.addToBody();
+            h2.addToBody();
+            h3.addToBody();
 
 		</script>
-		 <!--<script src="js/3DModel.js"></script>-->
+		<script src="js/3DModel.js"></script>
 	</body>
 </html>
