--- a/Visualization/FinalIndex.html
+++ b/Visualization/FinalIndex.html
@@ -87,15 +87,15 @@
             // HeatMap #1
             width = window.innerWidth/4;
             height = window.innerHeight/4;
-            var hm1 = new HeatMap(width, height, "data/heatmap.json", updateOrientation);
+            var hm1 = new HeatMap(width, height, "data/output.txt", updateOrientation);
             heatmaps[0] = hm1;
 
             // HeatMap #2
-            var hm2 = new HeatMap(width, height, "data/heatmap.json", updateOrientation);
+            var hm2 = new HeatMap(width, height, "data/output.txt", updateOrientation);
             heatmaps[1] = hm2;
 
             // HeatMap #3
-            var hm3 = new HeatMap(width, height, "data/heatmap.json", updateOrientation);
+            var hm3 = new HeatMap(width, height, "data/output.txt", updateOrientation);
             heatmaps[2] = hm3;
 
             /*
