--- a/Visualization/FinalIndex.html
+++ b/Visualization/FinalIndex.html
@@ -10,6 +10,7 @@
             <link rel="stylesheet" type="text/css" href="css/3DModel.css">
             <link rel="stylesheet" type="text/css" href="css/heatmap.css">
             <link rel="stylesheet" type="text/css" href="css/HistogramOne.css">
+            <link rel="stylesheet" type="text/css" href="css/model.css">
             <script src="js/jquery-2.0.2.min.js"></script>
 		<script src="js/three.js"></script>
 		<script src="js/d3.v3.min.js" charset="utf-8"></script>
@@ -24,8 +25,11 @@
           <div id="stats" style="text-align: center; font-size: large">Statistics</div>
 	        <div id="heatmaps" style="width:25%; float:left"></div>
           <div id="histograms" style="width:25%; float:left"></div>
-          <div id="model" style="width:50%; float:left; display:none"></div>
+          <div id="model" style="width:50%; float:left; display:none">
+            <span>stls/wizzard.stl</span>
+          </div>
 		<script>
+            var stlFileName = 'stls/wizzard.stl';
             var xRotation = 0, yRotation = 0;
             d3.json("data/surfaceAreaStats.json", function(error, surfaceAreaJson) {
               d3.json("data/materialStats.json", function(error, materialJson) {
@@ -40,7 +44,7 @@
 
             function handleData(materialJson, printTimeJson, surfaceAreaJson) {
 		
-            /*
+        /*
 	       * Histogram Allocation
 	       */
 	      var histograms = new Array(); 
