--- a/Visualization/FinalIndex.html
+++ b/Visualization/FinalIndex.html
@@ -129,6 +129,16 @@
             h2.addToBody();
             h3.addToBody();
 
+
+            /**
+             * Angles HeatMap
+             */ 
+            // width = window.innerWidth/4;
+            // height = window.innerHeight/4;
+            // var ah = new HistogramOne(width, height, anglesJson, "angles");
+
+            // ah.addToBody();
+
             /**
              * Unhide STL Model
              */ 
