--- a/Visualization/index.html
+++ b/Visualization/index.html
@@ -27,8 +27,8 @@
           <div id="stats" style="text-align: center; font-size: 26px; color:#C0C0C0">Statistics</div>
 	        <div id="heatmaps" style="width:25%; float:left"></div>
           <div id="histograms" style="width:25%; float:left"></div>
-          <div id="anglesHistogram" style="width:25%; float:left;"></div>
-          <div id="model" style="width:35%; float:left; display:none">
+          <div id="anglesHistogram" style="right:25px; position:absolute; width:20%; float:left;"></div>
+          <div id="model" style="width: 37.5%; float:left; display:none">
             <span>stls/wizzard.stl</span>
           </div>
 		<script>
